--- a/stylesheets/layout_desktop.scss
+++ b/stylesheets/layout_desktop.scss
@@ -50,7 +50,7 @@ section.curriculum .image-blurb {
 .application-steps {
   @include span-columns(6);
 }
-.hero { background-size: 100% }
+.hero { background-size: 1500px }
 .hero-blurb p {
   background-color: rgba(0, 0, 0, 0.03);
 }
