--- a/stylesheets/nav_desktop.scss
+++ b/stylesheets/nav_desktop.scss
@@ -2,6 +2,7 @@
   .logo {
     width: auto;
     padding-left: 30px;
+    float: left;
     p {
       color: $green;
       font-size: 14px;
@@ -18,29 +19,11 @@ nav {
     width: 100%;
   }
   li {
-    margin-left: 20px;
+    padding: 0px 10px;
     display: inline;
     float: left;
     display: inline;
-    a {
-      color: white;
-      padding-left: 20px;
-      padding-right: 20px;
-    }
-    a:hover { color:$green; }
     &:first-child { padding-left: 0px; }
     &:last-child { padding-right: 28px; }
-    &:last-child:after {
-      content: " ";
-      width: 0px;
-      margin-left: 0px;
-    }
-    &:after {
-      content: ' ';
-      display: inline-block;
-      height: 15px;
-      width: 3px;
-      background-color: $green;
-    }
   }
 }
