--- a/stylesheets/layout_1px.scss
+++ b/stylesheets/layout_1px.scss
@@ -30,14 +30,17 @@ header {
 .image-blurb {
   @include span-columns(6);
   @include omega(2n);
+  img, .icon { height: 70px; }
   text-align: center;
+  h3 {
+    margin-bottom: 0px;
+  }
+  p {
+    margin-top: 0px;
+  }
 }
 .curriculum-blurbs {
   @include outer-container;
-}
-.mail-signup #mc_embed_signup {
-  text-align: center;
-  width: auto;
 }
 button {
   width: 200px;
@@ -58,7 +61,7 @@ h1, h2 {
 .eligibility {
   @include span-columns(12);
   h3 {
-    text-align: center;
+    padding-left: 20px;
   }
   ul { padding-left: 0px; }
   ul li {
@@ -76,33 +79,4 @@ h1, h2 {
 }
 .application-steps {
   @include row();
-}
-.mail-signup #mc_embed_signup #input-box input[type="email"] {
-  font-family: $font;
-  font-size: modular-scale(0);
-  display: block;
-  margin: 0;
-  box-shadow: none;
-  border-radius: none;
-  padding-top: 5.5px;
-  margin-top: 4.5px;
-  width: 200px;
-  float: left;
-  padding: 9.5px;
-}
-.short-button {
-  padding: 6.5px 27px;
-  margin-right: auto;
-  margin-left: -60px;
-  display:inline-block;
-  background-color: $green;
-  cursor:pointer;
-  color:#ffffff;
-  font-family: $font;
-  font-size: modular-scale(1);
-  text-decoration:none;
-  border: none;
-  bottom: 1000px;
-  margin-top: 4.5px;
-  margin-right: -11px;
 }
