--- a/stylesheets/nav_1px.scss
+++ b/stylesheets/nav_1px.scss
@@ -22,20 +22,21 @@ nav {
   ul {
     @include clearfix;
     font-family: $font;
-    font-size: modular-scale(-2);
     width: 100%;
     text-align: center;
     padding-left: 0px;
+    margin: 0px;
+    padding-bottom: 10px;
   }
   li {
     padding: 0px 3px;
+    font-size: modular-scale(-2);
     border-right: 2px solid $green;
-    &:first-child { padding-left: -10px; }
     &:last-child { border-right: none; }
     display: inline;
     a {
       color: white;
-      padding-left: 5px;
+      padding-left: 3px;
       padding-right: 5px;
     }
     a:hover { color:$green; }
