Adds curriculum icons and headers

--- a/stylesheets/base.scss
+++ b/stylesheets/base.scss
@@ -122,3 +122,9 @@ section {
   font-size: 24px;
   vertical-align: super;
 }
+#icon_1 {
+  margin-top: -9px;
+  height: 78px;
+  width: 82px;
+  padding-top: -90px;
+}
