--- a/stylesheets/layout_desktop.scss
+++ b/stylesheets/layout_desktop.scss
@@ -65,3 +65,6 @@ section.curriculum .image-blurb {
 .long-button {
   width: 300px;
 }
+.curriculum .curriculum-blurbs .image-blurb {
+  margin-top: 40px;
+}
