--- a/stylesheets/layout_1px.scss
+++ b/stylesheets/layout_1px.scss
@@ -23,6 +23,7 @@ header {
     @include outer-container;
     text-align: center;
     padding: 50px 20% 75px;
+    font-weight: 200;
   }
 }
 .image-blurb {
