--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -156,7 +156,8 @@ header::after {
     margin-left: auto;
     margin-right: auto;
     text-align: center;
-    padding: 50px 20% 75px; }
+    padding: 50px 20% 75px;
+    font-weight: 200; }
     .hero .hero-blurb::after {
       clear: both;
       content: "";
@@ -512,7 +513,8 @@ footer {
   .hero {
     background-size: 1500px; }
     .hero .hero-blurb {
-      max-width: 80em; }
+      max-width: 80em;
+      font-weight: 100; }
     .hero p {
       font-size: 1.333em;
       font-weight: 100; }
