--- a/stylesheets/layout_1px.scss
+++ b/stylesheets/layout_1px.scss
@@ -25,6 +25,7 @@ header {
     padding-right: 20%;
     padding-left: 20%;
     padding-bottom: 75px;
+    font-weight: 200;
   }
 }
 .image-blurb {
