added weight for p words

--- a/stylesheets/layout_desktop.scss
+++ b/stylesheets/layout_desktop.scss
@@ -58,6 +58,7 @@ section.curriculum .image-blurb {
     font-weight: 100;
   }
 }
+p {font-weight: 100;}
 .mail-signup #mc_embed_signup #input-box input[type="email"] {
   font-family: $font;
   font-size: modular-scale(0);
