added weight for p words

--- a/stylesheets/layout_1px.scss
+++ b/stylesheets/layout_1px.scss
@@ -25,9 +25,9 @@ header {
     padding-right: 20%;
     padding-left: 20%;
     padding-bottom: 75px;
-    font-weight: 200;
   }
 }
+p {font-weight: 200;}
 .image-blurb {
   @include span-columns(6);
   @include omega(2n);
