--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -158,12 +158,14 @@ header::after {
     text-align: center;
     padding-right: 20%;
     padding-left: 20%;
-    padding-bottom: 75px;
-    font-weight: 200; }
+    padding-bottom: 75px; }
     .hero .hero-blurb::after {
       clear: both;
       content: "";
       display: table; }
+
+p {
+  font-weight: 200; }
 
 .image-blurb {
   float: left;
@@ -496,6 +498,9 @@ footer {
     .hero p {
       font-size: 1.333em;
       font-weight: 100; }
+
+  p {
+    font-weight: 100; }
 
   .mail-signup #mc_embed_signup #input-box input[type="email"] {
     font-family: Roboto, sans-serif;
