--- a/stylesheets/mailchimp_1px.scss
+++ b/stylesheets/mailchimp_1px.scss
@@ -25,14 +25,14 @@
   padding: 15px 10px 10px;
 }
 .short-button {
-  padding: 10px 30px;
+  padding: 11px 30px;
   margin-right: auto;
   margin-left: -10px;
   display: inline;
   background-color: $green;
   cursor:pointer;
   color:#ffffff;
-  font-family: $font;
+  font-family: 1.733em;
   font-size: modular-scale(1);
   text-decoration:none;
   border: none;
