--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -359,7 +359,6 @@ nav {
   position: relative; }
 
 footer {
-  padding-top: 30px;
   float: left;
   display: block;
   margin-right: 2.35765%;
@@ -368,13 +367,18 @@ footer {
   footer:last-child {
     margin-right: 0; }
   footer .partner-logos {
-    padding: 30px 0px 80px; }
+    padding: 20px 0px 40px; }
   footer a {
     margin-right: 30px; }
     footer a:last-child {
       margin-right: 0px; }
     footer a img {
-      height: 30px; }
+      width: 60%;
+      height: 40px; }
+
+footer .not-ms .partner-logo img {
+  width: 40%;
+  margin-bottom: 10px; }
 
 .footer {
   background-color: black;
@@ -389,6 +393,16 @@ footer {
   max-width: none; }
   .footer:last-child {
     margin-right: 0; }
+  .footer .partner-logo {
+    float: left;
+    display: block;
+    margin-right: 2.35765%;
+    width: 100%;
+    margin-bottom: 10px; }
+    .footer .partner-logo:last-child {
+      margin-right: 0; }
+    .footer .partner-logo:first-child {
+      margin-bottom: 10px; }
   .footer nav, .footer ul {
     float: none;
     width: auto; }
@@ -608,6 +622,22 @@ footer {
 
   footer h2 {
     margin-top: 150px; }
+
+  footer .partner-logos {
+    float: left;
+    display: block;
+    margin-right: 2.35765%;
+    width: 100%; }
+    footer .partner-logos:last-child {
+      margin-right: 0; }
+  footer .partner-logo {
+    display: inline-block;
+    float: left;
+    display: block;
+    margin-right: 2.35765%;
+    width: 31.76157%; }
+    footer .partner-logo:last-child {
+      margin-right: 0; }
 
   .nav-bar .logo {
     width: auto;
