--- a/stylesheets/footer_1px.scss
+++ b/stylesheets/footer_1px.scss
@@ -1,20 +1,20 @@
 footer {
-  padding-top: 30px;
+  // padding-top: 30px;
   @include span-columns(12);
   text-align: center;
   .partner-logos {
-    padding: 30px 0px 80px;
+    padding: 20px 0px 40px;
   }
   a {
-    margin-right: 30px;
-    &:last-child {
-      margin-right: 0px;
-    }
+    display: block;
+    padding-bottom:20px;
     img {
-      height: 30px;
+
+      height: 60px;
     }
   }
 }
+
 .footer {
   background-color:black;
   color: white;
