--- a/stylesheets/footer_desktop.scss
+++ b/stylesheets/footer_desktop.scss
@@ -7,3 +7,17 @@ footer a {
 footer h2 {
   margin-top: 150px;
 }
+footer {
+  .partner-logos {
+    @include span-columns(12);
+    a {
+      display:inline-block;
+      img {
+        height: 60px;
+        margin-right: 20px;
+        text-align:center;
+        &:last-child {margin-right: 0px;}
+      }
+    }
+  }
+}
