--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -359,7 +359,6 @@ nav {
   position: relative; }
 
 footer {
-  padding-top: 30px;
   float: left;
   display: block;
   margin-right: 2.35765%;
@@ -368,13 +367,12 @@ footer {
   footer:last-child {
     margin-right: 0; }
   footer .partner-logos {
-    padding: 30px 0px 80px; }
+    padding: 20px 0px 40px; }
   footer a {
-    margin-right: 30px; }
-    footer a:last-child {
-      margin-right: 0px; }
+    display: block;
+    padding-bottom: 20px; }
     footer a img {
-      height: 30px; }
+      height: 60px; }
 
 .footer {
   background-color: black;
@@ -608,6 +606,22 @@ footer {
 
   footer h2 {
     margin-top: 150px; }
+
+  footer .partner-logos {
+    float: left;
+    display: block;
+    margin-right: 2.35765%;
+    width: 100%; }
+    footer .partner-logos:last-child {
+      margin-right: 0; }
+    footer .partner-logos a {
+      display: inline-block; }
+      footer .partner-logos a img {
+        height: 60px;
+        margin-right: 20px;
+        text-align: center; }
+        footer .partner-logos a img:last-child {
+          margin-right: 0px; }
 
   .nav-bar .logo {
     width: auto;
