--- a/stylesheets/footer_1px.scss
+++ b/stylesheets/footer_1px.scss
@@ -18,7 +18,9 @@ footer {
 }
 footer .not-ms .partner-logo img { 
   width:40%;
-  margin-bottom:10px;
+  margin-top:20px;
+  height: 50px;
+  width: 120px;
 }
 .footer {
   background-color:black;
@@ -43,4 +45,8 @@ footer .not-ms .partner-logo img {
     padding: 0px;
   }
   nav { padding: 10px 0px; }
+}
+#micrsoft {
+  height: 80px;
+  width: 130px;
 }
