--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -378,7 +378,9 @@ footer {
 
 footer .not-ms .partner-logo img {
   width: 40%;
-  margin-bottom: 10px; }
+  margin-top: 20px;
+  height: 50px;
+  width: 120px; }
 
 .footer {
   background-color: black;
@@ -413,6 +415,10 @@ footer .not-ms .partner-logo img {
     padding: 0px; }
   .footer nav {
     padding: 10px 0px; }
+
+#micrsoft {
+  height: 80px;
+  width: 130px; }
 
 .mail-signup #mc_embed_signup #mc_embed_signup_scroll label[for=mce-EMAIL] {
   display: block;
@@ -624,20 +630,38 @@ footer .not-ms .partner-logo img {
     margin-top: 150px; }
 
   footer .partner-logos {
+    position: relative;
     float: left;
     display: block;
     margin-right: 2.35765%;
-    width: 100%; }
+    width: 100%;
+    display: inline-block;
+    margin: 30px 40px 80px 40px; }
     footer .partner-logos:last-child {
       margin-right: 0; }
   footer .partner-logo {
-    display: inline-block;
-    float: left;
-    display: block;
-    margin-right: 2.35765%;
-    width: 31.76157%; }
-    footer .partner-logo:last-child {
-      margin-right: 0; }
+    display: inline-block; }
+  footer #microsoft {
+    height: 40px;
+    width: 430px;
+    position: absolute;
+    top: 1px;
+    left: 220px;
+    margin-right: 90px; }
+  footer #citytech {
+    height: 40px;
+    width: 300px;
+    position: absolute;
+    top: 1px;
+    left: 420px;
+    margin-left: 120px; }
+  footer #techpipe {
+    height: 40px;
+    width: 300px;
+    position: absolute;
+    top: 1px;
+    left: 605px;
+    margin-left: 120px; }
 
   .nav-bar .logo {
     width: auto;
