--- a/style.css
+++ b/style.css
@@ -1,25 +1,25 @@
 /*
-Errno::ENOENT: No such file or directory - style.scss
+Errno::ENOENT: No such file or directory @ rb_sysopen - style.scss
 
 Backtrace:
-/usr/local/rvm/gems/ruby-1.9.3-p448/gems/sass-3.4.16/lib/sass/plugin/compiler.rb:482:in `read'
-/usr/local/rvm/gems/ruby-1.9.3-p448/gems/sass-3.4.16/lib/sass/plugin/compiler.rb:482:in `update_stylesheet'
-/usr/local/rvm/gems/ruby-1.9.3-p448/gems/sass-3.4.16/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
-/usr/local/rvm/gems/ruby-1.9.3-p448/gems/sass-3.4.16/lib/sass/plugin/compiler.rb:209:in `each'
-/usr/local/rvm/gems/ruby-1.9.3-p448/gems/sass-3.4.16/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
-/usr/local/rvm/gems/ruby-1.9.3-p448/gems/sass-3.4.16/lib/sass/plugin/compiler.rb:293:in `watch'
-/usr/local/rvm/gems/ruby-1.9.3-p448/gems/sass-3.4.16/lib/sass/plugin.rb:108:in `method_missing'
-/usr/local/rvm/gems/ruby-1.9.3-p448/gems/sass-3.4.16/lib/sass/exec/sass_scss.rb:384:in `watch_or_update'
-/usr/local/rvm/gems/ruby-1.9.3-p448/gems/sass-3.4.16/lib/sass/exec/sass_scss.rb:51:in `process_result'
-/usr/local/rvm/gems/ruby-1.9.3-p448/gems/sass-3.4.16/lib/sass/exec/base.rb:52:in `parse'
-/usr/local/rvm/gems/ruby-1.9.3-p448/gems/sass-3.4.16/lib/sass/exec/base.rb:19:in `parse!'
-/usr/local/rvm/gems/ruby-1.9.3-p448/gems/sass-3.4.16/bin/sass:13:in `<top (required)>'
-/usr/local/rvm/gems/ruby-1.9.3-p448/bin/sass:23:in `load'
-/usr/local/rvm/gems/ruby-1.9.3-p448/bin/sass:23:in `<main>'
-/usr/local/rvm/gems/ruby-1.9.3-p448/bin/ruby_noexec_wrapper:14:in `eval'
-/usr/local/rvm/gems/ruby-1.9.3-p448/bin/ruby_noexec_wrapper:14:in `<main>'
+/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/plugin/compiler.rb:482:in `read'
+/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/plugin/compiler.rb:482:in `update_stylesheet'
+/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
+/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/plugin/compiler.rb:209:in `each'
+/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
+/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/plugin/compiler.rb:293:in `watch'
+/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/plugin.rb:108:in `method_missing'
+/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/exec/sass_scss.rb:384:in `watch_or_update'
+/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/exec/sass_scss.rb:51:in `process_result'
+/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/exec/base.rb:52:in `parse'
+/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/lib/sass/exec/base.rb:19:in `parse!'
+/Users/daniellehill/.rvm/gems/ruby-2.1.4/gems/sass-3.4.16/bin/sass:13:in `<top (required)>'
+/Users/daniellehill/.rvm/gems/ruby-2.1.4/bin/sass:23:in `load'
+/Users/daniellehill/.rvm/gems/ruby-2.1.4/bin/sass:23:in `<main>'
+/Users/daniellehill/.rvm/gems/ruby-2.1.4/bin/ruby_executable_hooks:15:in `eval'
+/Users/daniellehill/.rvm/gems/ruby-2.1.4/bin/ruby_executable_hooks:15:in `<main>'
 */
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Errno::ENOENT: No such file or directory - style.scss"; }
+  content: "Errno::ENOENT: No such file or directory @ rb_sysopen - style.scss"; }
